# fstn

./: Cargo.nix  Cargo.toml  LICENSE.txt  README.md  default.nix  register.md  shell.nix
.github/: build.yml
.github/workflows/: build.yml
src/: fs.rs  main.rs
