[package]
name = "fstn"
description = "A CLI client for interacting with Faasten"
version = "0.10.1"
edition = "2021"
repository = "https://github.com/faasten/fstn"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
clap = { version = "4.3.24", features = ["derive"]}
dirs = "4"
toml = "0.5"
serde = "1"
serde_derive = "1"
serde_with = { version = "1", features = [ "base64" ] }
serde_json = "1"
serde_repr = "0.1"
termcolor = "1"
backhand = "0.12"
